--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(bci.r)
 export(bse.r)
 export(bse.t)
 export(ci.se)
+export(crosstab.prev)
+export(crosstab.rr)
 export(d.r)
 export(d.t)
 export(dicho.d.r)
